JBTM-1985 Update to redirect output and error stream to file when launching the server